--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                     <h1>Reportes y Estadísticas</h1>
                     <div class="header-actions">
                         <button class="btn btn-secondary" onclick="window.location.href='api/exportar_excel.php?tipo=reporte_completo'">
-                            <i class="fas fa-file-excel"></i> Exportar Reporte Completo
+                            <i class="fas fa-file-excel"></i> Exportar Excel
                         </button>
                         <button class="btn" onclick="cargarReportes()">
                             <i class="fas fa-sync"></i> Actualizar
@@ -375,26 +375,73 @@
                     </div>
                 </div>
 
-                <!-- Gráficos -->
+                <!-- Información -->
+                <div style="background: #fff3cd; border: 1px solid #ffc107; border-radius: 8px; padding: 12px; margin-bottom: 1.5rem; display: flex; align-items: center; gap: 10px;">
+                    <i class="fas fa-info-circle" style="color: #f39c12; font-size: 1.2rem;"></i>
+                    <span style="color: #856404; font-size: 0.9rem;">Los reportes se actualizan automáticamente cada 30 segundos. Mostrando top 10 cursos por rendimiento.</span>
+                </div>
+
+                <!-- Gráficos optimizados -->
                 <div class="dashboard-cards" style="margin-bottom: 2rem;">
                     <div class="card" style="grid-column: span 2;">
-                        <h3 class="card-title" style="margin-bottom: 1rem;">Distribución de Estudiantes por Curso</h3>
-                        <canvas id="chartEstudiantesCurso" height="100"></canvas>
+                        <h3 class="card-title" style="margin-bottom: 1rem;">
+                            <i class="fas fa-users"></i> Top 10 Cursos por Estudiantes
+                        </h3>
+                        <div style="height: 300px; position: relative;">
+                            <canvas id="chartEstudiantesCurso"></canvas>
+                        </div>
                     </div>
                     <div class="card" style="grid-column: span 2;">
-                        <h3 class="card-title" style="margin-bottom: 1rem;">Rendimiento Académico</h3>
-                        <canvas id="chartRendimiento" height="100"></canvas>
+                        <h3 class="card-title" style="margin-bottom: 1rem;">
+                            <i class="fas fa-chart-pie"></i> Rendimiento Académico
+                        </h3>
+                        <div style="height: 300px; position: relative;">
+                            <canvas id="chartRendimiento"></canvas>
+                        </div>
                     </div>
                 </div>
 
                 <div class="dashboard-cards">
                     <div class="card" style="grid-column: span 2;">
-                        <h3 class="card-title" style="margin-bottom: 1rem;">Promedios por Curso</h3>
-                        <canvas id="chartPromediosCurso" height="100"></canvas>
+                        <h3 class="card-title" style="margin-bottom: 1rem;">
+                            <i class="fas fa-chart-bar"></i> Top 8 Promedios por Curso
+                        </h3>
+                        <div style="height: 300px; position: relative;">
+                            <canvas id="chartPromediosCurso"></canvas>
+                        </div>
                     </div>
                     <div class="card" style="grid-column: span 2;">
-                        <h3 class="card-title" style="margin-bottom: 1rem;">Top 10 Estudiantes</h3>
-                        <div id="topEstudiantes" style="max-height: 300px; overflow-y: auto;"></div>
+                        <h3 class="card-title" style="margin-bottom: 1rem;">
+                            <i class="fas fa-trophy"></i> Top 10 Mejores Estudiantes
+                        </h3>
+                        <div id="topEstudiantes" style="max-height: 300px; overflow-y: auto;">
+                            <p style="text-align: center; color: #999; padding: 20px;">Cargando datos...</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Resumen estadístico -->
+                <div class="table-container" style="margin-top: 1.5rem;">
+                    <h3 class="table-title" style="margin-bottom: 1rem;">
+                        <i class="fas fa-info-circle"></i> Información del Sistema
+                    </h3>
+                    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem;">
+                        <div style="padding: 1rem; background: #f8f9fa; border-radius: 8px;">
+                            <div style="font-size: 0.85rem; color: #777; margin-bottom: 5px;">Total Cursos Activos</div>
+                            <div id="resumenCursos" style="font-size: 1.5rem; font-weight: bold; color: #3498db;">-</div>
+                        </div>
+                        <div style="padding: 1rem; background: #f8f9fa; border-radius: 8px;">
+                            <div style="font-size: 0.85rem; color: #777; margin-bottom: 5px;">Total Estudiantes</div>
+                            <div id="resumenEstudiantes" style="font-size: 1.5rem; font-weight: bold; color: #27ae60;">-</div>
+                        </div>
+                        <div style="padding: 1rem; background: #f8f9fa; border-radius: 8px;">
+                            <div style="font-size: 0.85rem; color: #777; margin-bottom: 5px;">Total Actividades</div>
+                            <div id="resumenActividades" style="font-size: 1.5rem; font-weight: bold; color: #f39c12;">-</div>
+                        </div>
+                        <div style="padding: 1rem; background: #f8f9fa; border-radius: 8px;">
+                            <div style="font-size: 0.85rem; color: #777; margin-bottom: 5px;">Promedio General</div>
+                            <div id="resumenPromedio" style="font-size: 1.5rem; font-weight: bold; color: #e74c3c;">-</div>
+                        </div>
                     </div>
                 </div>
             </div>
